# khmerthings

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  wordlist_addition.md
.github/workflows/: ci.yml  publish.yml
docs/: condense.md  line-sorter.md  normalize.md  numerals.md  orthography.md  romanize.md  spellcheck.md  spellfix.md  word-breaker.md  word-counter.md
scripts/: benchmark.py  coverage_gaps.py
src/khmerthings/: __init__.py  __main__.py  chars.py  cli.py  clusters.py  condense.py  counter.py  lexicon.py  normalize.py  numerals.py  orthography.py  phonetics.py  romanize.py  segmenter.py  sorting.py  spellcheck.py  tokenizer.py
src/khmerthings/data/: modern.txt  names.txt  romanize.txt  stopwords.txt  variants.txt  words.txt
tests/: test_chars.py  test_cli.py  test_clusters.py  test_condense.py  test_counter.py  test_coverage_gaps.py  test_install_script.py  test_invariants.py  test_lexicon.py  test_normalize.py  test_numerals.py  test_orthography.py  test_romanize.py  test_segmenter.py  test_sorting.py  test_spellcheck.py  test_tokenizer.py
